--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_API_KEY = AIzaSyAa3ZohPE2eIPXZ2Y89po_f6TiGSI7IGpg
+# REACT_APP_API_KEY = AIzaSyAa3ZohPE2eIPXZ2Y89po_f6TiGSI7IGpg
+REACT_APP_API_KEY = AIzaSyAH-gm5ZqXwbjNfUpeK9CWu81HjLVdPXsk
